<resources>
    <string name="app_name">Traffic Cam Sydney</string>


    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>



    <string name="pref_title_general">GENERAL</string>
    <string name="pref_title_about">ABOUT</string>
    <string name="pref_title_feedback">FEEDBACK</string>
    <string name="pref_title_build_information">BUILD INFORMATION</string>

    <string name="pref_list_display_images">Show images in list</string>

    <string name="pref_privacy">Privacy</string>
    <string name="pref_summary_privacy">We do not collect any data. Your privacy is important to us.</string>

    <string name="pref_rating">Rating</string>
    <string name="pref_summary_rating">Your rating will help us improve this app.</string>

    <string name="pref_contact">Contact</string>
    <string name="pref_summary_contact">Please contact us if you encounter any issues.</string>

    <string name="pref_app_version">Version</string>

</resources>
